Bug 499995 - fix signed/unsigned compiler warnings in mailnews. r+sr=neil.