mailnews/base/util/nsImapMoveCoalescer.cpp
@@ -79,7 +79,7 @@ nsresult nsImapMoveCoalescer::AddMove(nsIMsgFolder *folder, nsMsgKey key)
       return NS_ERROR_OUT_OF_MEMORY;
   }
 
-  if (keysToAdd->IndexOf(key) == -1)
+  if (keysToAdd->IndexOf(key) == keysToAdd->NoIndex)
     keysToAdd->AppendElement(key);
 
   return NS_OK;
